--- a/index.html
+++ b/index.html
@@ -1,215 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Elnaz Abbasifar</title>
-<style>
-/* Reset */
-body, html { margin:0; padding:0; font-family: Arial,sans-serif; scroll-behavior:smooth; background:#f9fafb; color:#333; }
-a { text-decoration:none; }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Elnaz Abbasifar - Academic Website</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      background: #f9fafc;
+      color: #333;
+    }
 
-/* Layout */
-.container { display:flex; }
+    /* Sidebar (Header) */
+    .sidebar {
+      width: 260px;
+      background: #f0f0f0;
+      padding: 20px;
+      position: fixed;
+      height: 100%;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.05);
+    }
 
-/* Sidebar (Header) */
-.sidebar {
-  width:260px;
-  background:#f0f0f0;
-  padding:30px 20px;
-  min-height:100vh;
-  box-sizing:border-box;
-}
-.sidebar img {
-  width:140px; height:140px;
-  border-radius:50%; object-fit:cover;
-  display:block; margin:0 auto 20px auto;
-}
-.sidebar h1 {
-  font-size:1.6rem; text-align:center; margin-bottom:10px;
-}
-.sidebar p {
-  font-size:0.95rem; line-height:1.6; text-align:center; margin:5px 0;
-}
-.sidebar a { color:#2563eb; }
+    .sidebar h1 {
+      font-size: 22px;
+      margin-bottom: 10px;
+      color: #222;
+    }
 
-/* Navigation */
-nav {
-  margin-top:30px;
-}
-.nav-link {
-  display:block;
-  color:#333;
-  font-weight:bold;
-  margin:10px 0;
-  position:relative;
-  transition: all 0.3s ease;
-}
-.nav-link:hover {
-  color:#1e40af;
-}
-.nav-link::after {
-  content:"";
-  position:absolute;
-  width:0;
-  height:2px;
-  background:#1e40af;
-  left:0;
-  bottom:-3px;
-  transition: width 0.3s ease;
-}
-.nav-link:hover::after { width:100%; }
+    .sidebar p {
+      margin-bottom: 20px;
+      line-height: 1.6;
+      color: #555;
+    }
 
-/* Main Content */
-.main {
-  flex:1;
-  padding:40px;
-}
-section { margin-bottom:60px; }
-section h2 {
-  font-size:2rem;
-  margin-bottom:20px;
-  color:#1e40af;
-}
-.card {
-  background:white; padding:20px;
-  border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1);
-  margin-bottom:20px;
-}
+    .sidebar h3 {
+      font-size: 16px;
+      margin-top: 25px;
+      margin-bottom: 10px;
+      color: #222;
+    }
 
-/* Grid for projects */
-.cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px; }
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
 
-/* Carousel */
-.carousel { position:relative; overflow:hidden; max-width:800px; margin:0 auto; }
-.carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
-.carousel-item { flex:0 0 240px; margin-right:1rem; border-radius:8px; overflow:hidden; }
-.carousel-item img { width:100%; height:160px; object-fit:cover; }
-.carousel-btn {
-  position:absolute; top:50%; transform:translateY(-50%);
-  background:#2563eb; color:white; border:none;
-  padding:6px 10px; border-radius:50%; cursor:pointer;
-}
-.carousel-btn.left { left:10px; }
-.carousel-btn.right { right:10px; }
+    .sidebar ul li {
+      margin-bottom: 8px;
+      font-size: 14px;
+      color: #444;
+    }
 
-/* Footer */
-footer {
-  text-align:center; padding:20px; background:#4f46e5; color:white;
-}
-</style>
+    /* Navbar */
+    .navbar {
+      margin-left: 260px;
+      width: calc(100% - 260px);
+      background: #fff;
+      padding: 12px 30px;
+      position: fixed;
+      top: 0;
+      display: flex;
+      gap: 20px;
+      border-bottom: 1px solid #e0e0e0;
+      z-index: 10;
+    }
+
+    .navbar a {
+      text-decoration: none;
+      color: #444;
+      font-weight: 500;
+      transition: color 0.2s;
+    }
+
+    .navbar a:hover {
+      color: #000;
+    }
+
+    /* Main Content */
+    .content {
+      margin-left: 260px;
+      padding: 80px 40px 40px 40px;
+      width: calc(100% - 260px);
+    }
+
+    section {
+      margin-bottom: 50px;
+    }
+
+    section h2 {
+      font-size: 22px;
+      margin-bottom: 15px;
+      color: #444;
+    }
+
+    section ul {
+      padding-left: 20px;
+    }
+
+    section ul li {
+      margin-bottom: 6px;
+      line-height: 1.5;
+    }
+
+    .project-link {
+      color: #444;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .project-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h1>Elnaz Abbasifar</h1>
+    <p>PhD Applicant in Computer Science with a focus on <strong>data management</strong>, <strong>machine learning</strong>, and <strong>graph-based analysis</strong>. Passionate about improving the reliability of real-world evidence in healthcare.</p>
 
-<!-- Sidebar -->
-<div class="sidebar">
-  <img src="https://via.placeholder.com/140" alt="Elnaz Abbasifar">
-  <h1>Elnaz Abbasifar</h1>
-  <p>M.Sc. in IT Management<br>B.Sc. in Computer Engineering</p>
-  <p>Email: <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></p>
-  <p><a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">LinkedIn</a> | 
-     <a href="https://github.com/elnazabbasifar" target="_blank">GitHub</a></p>
-  <nav>
-    <a href="#education" class="nav-link">Education & Training</a>
-    <a href="#research" class="nav-link">Research</a>
-    <a href="#work" class="nav-link">Work Experience</a>
-    <a href="#projects" class="nav-link">Projects</a>
-    <a href="#skills" class="nav-link">Skills</a>
-    <a href="#certificates" class="nav-link">Certificates</a>
-  </nav>
-</div>
+    <h3>Contact</h3>
+    <ul>
+      <li>Email: elnaz@example.com</li>
+      <li>GitHub: github.com/elnazabbasifar</li>
+      <li>Location: Tehran, Iran</li>
+    </ul>
 
-<!-- Main Content -->
-<div class="main">
-  <section id="education">
-    <h2>Education & Training</h2>
-    <div class="card">
-      <h3>Degrees</h3>
+    <h3>Skills</h3>
+    <ul>
+      <li>Python, C#, SQL</li>
+      <li>Machine Learning, Predictive Analytics</li>
+      <li>Graph Neural Networks (PyTorch Geometric)</li>
+      <li>SQL Server, Power BI, Git</li>
+    </ul>
+  </div>
+
+  <!-- Navbar -->
+  <div class="navbar">
+    <a href="#about">Home</a>
+    <a href="#training">Academic Background & Training</a>
+    <a href="#research">Research</a>
+    <a href="#projects">Projects</a>
+    <a href="#publications">Publications</a>
+    <a href="#certificates">Certificates</a>
+    <a href="#cv">CV</a>
+  </div>
+
+  <!-- Main Content -->
+  <div class="content">
+    <section id="training">
+      <h2>Academic Background & Training</h2>
       <ul>
-        <li>M.Sc. in IT Management (Advanced Information Systems)</li>
-        <li>B.Sc. in Computer Engineering – Software</li>
+        <li>Artificial Intelligence Autumn School, Amirkabir University, Iran (2021)</li>
+        <li>Resource-Aware Machine Learning, Summer School, TU Dortmund, Germany (2020)</li>
+        <li>Security of Things (SeThi 2020), University of Rostock, Germany (2020)</li>
+        <li>Lviv Data Science Summer School, Ukrainian Catholic University, Ukraine (2020)</li>
       </ul>
-    </div>
-    <div class="card">
-      <h3>Summer Schools & Training</h3>
+    </section>
+
+    <section id="research">
+      <h2>Research Experience</h2>
       <ul>
-        <li>AI Autumn School, Amirkabir Univ., Iran (2021)</li>
-        <li>Resource-Aware ML, TU Dortmund, Germany (2020)</li>
-        <li>Security of Things (SeThi), Univ. Rostock, Germany (2020)</li>
-        <li>Lviv Data Science Summer School, Ukraine (2020)</li>
+        <li><strong>AI Researcher</strong>, Technology Studies Institute, Tehran (2021)<br>
+        Comparative analysis of global AI ecosystems; collaborated with interdisciplinary scientists.</li>
+        <li><strong>Graduate Researcher (MSc Thesis)</strong>, Payame Noor University, Tehran (2016–2018)<br>
+        Conducted research on social network analysis.</li>
       </ul>
-    </div>
-  </section>
+    </section>
 
-  <section id="research">
-    <h2>Research Experience</h2>
-    <div class="card">
-      <h3>AI Researcher – Technology Studies Institute (2021)</h3>
-      <p>Comparative analysis of global AI ecosystems; collaborated with interdisciplinary scientists.</p>
-    </div>
-    <div class="card">
-      <h3>Graduate Researcher – Payame Noor University (2016–2018)</h3>
-      <p>Conducted research on social network analysis for MSc thesis.</p>
-    </div>
-  </section>
-
-  <section id="work">
-    <h2>Work Experience</h2>
-    <div class="card"><h3>BPM Data Analyst – Pegah Aftab (2021–Now)</h3><p>Designed processes & UI with C# and React.</p></div>
-    <div class="card"><h3>BI Developer – Pegah Aftab (2024)</h3><p>Built Power BI dashboards for performance metrics.</p></div>
-    <div class="card"><h3>Data Science Intern – T25 Company (2020)</h3><p>Automated data workflows with Python.</p></div>
-    <div class="card"><h3>SQL/BPM Developer – Payam Mashregh (2014–2017)</h3><p>Led 9-member team optimizing processes.</p></div>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="cards">
-      <div class="card"><h3>Tree-Structured Graph Classification (2025)</h3><p>GNN with PyTorch Geometric.</p></div>
-      <div class="card"><h3>Cardio Risk Prediction (2023)</h3><p>Lasso Regression model.</p></div>
-      <div class="card"><h3>Ensemble Learning (2023)</h3><p>Random Forest & Decision Trees.</p></div>
-      <div class="card"><h3>EDA Seattle Traffic Data (2020)</h3><p>Exploratory data analysis for safety insights.</p></div>
-    </div>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <div class="card">
+    <section id="projects">
+      <h2>Projects</h2>
       <ul>
-        <li>Programming: Python, C#, SQL</li>
-        <li>Libraries: NumPy, Pandas, Scikit-learn, PyTorch Geometric</li>
-        <li>Tools: Power BI, Git, SQL Server, Jupyter, VS, Colab</li>
+        <li><strong>Tree-Structured Graph Classification with GNN</strong> (2025) – <a href="#" class="project-link">GitHub</a></li>
+        <li><strong>Precision in Cardiovascular Risk Prediction: Lasso Regression</strong> (2023) – <a href="#" class="project-link">GitHub</a></li>
+        <li><strong>Ensemble Learning for Mobile Price Prediction</strong> (2023) – <a href="#" class="project-link">GitHub</a></li>
+        <li><strong>EDA: Seattle Traffic Collision Data</strong> (2020) – <a href="#" class="project-link">GitHub</a></li>
       </ul>
-    </div>
-  </section>
+    </section>
 
-  <section id="certificates">
-    <h2>Certificates</h2>
-    <div class="carousel" id="carousel">
-      <div class="carousel-track" id="track">
-        <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+1"></div>
-        <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+2"></div>
-        <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+3"></div>
-      </div>
-      <button class="carousel-btn left" id="prev">‹</button>
-      <button class="carousel-btn right" id="next">›</button>
-    </div>
-  </section>
-</div>
-</div>
+    <section id="publications">
+      <h2>Publications</h2>
+      <ul>
+        <li>Soft Computing and Soft Data Mining in Bioinformatics – Journal Article</li>
+        <li>Social Network Applications and Customer Trust – Conference Paper</li>
+      </ul>
+    </section>
 
-<footer>© 2025 Elnaz Abbasifar. All rights reserved.</footer>
+    <section id="certificates">
+      <h2>Certificates</h2>
+      <p>Certificates carousel can be added here with images (e.g., Swiper.js).</p>
+    </section>
 
-<script>
-const track = document.getElementById('track');
-const prev = document.getElementById('prev');
-const next = document.getElementById('next');
-const items = track.children;
-let index = 0;
-function updateCarousel() { track.style.transform = `translateX(-${index*240}px)`; }
-prev.addEventListener('click', () => { index = (index===0?items.length-1:index-1); updateCarousel(); });
-next.addEventListener('click', () => { index = (index===items.length-1?0:index+1); updateCarousel(); });
-setInterval(()=>{ index = (index+1)%items.length; updateCarousel(); }, 3000);
-</script>
+    <section id="cv">
+      <h2>Curriculum Vitae</h2>
+      <p>A brief overview of degrees, research, and projects is already presented. Full CV available upon request.</p>
+    </section>
+  </div>
 </body>
 </html>
