--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       position: fixed;
       height: 100%;
       box-shadow: 2px 0 5px rgba(0,0,0,0.05);
+      overflow-y: auto;
     }
 
     .sidebar h1 {
@@ -88,6 +89,14 @@
 
     section {
       margin-bottom: 50px;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s ease-out;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     section h2 {
@@ -140,7 +149,6 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <a href="#about">Home</a>
     <a href="#training">Academic Background & Training</a>
     <a href="#research">Research</a>
     <a href="#projects">Projects</a>
@@ -199,5 +207,23 @@
       <p>A brief overview of degrees, research, and projects is already presented. Full CV available upon request.</p>
     </section>
   </div>
+
+  <script>
+    // Fade-in on scroll
+    const sections = document.querySelectorAll("section");
+
+    function revealOnScroll() {
+      const triggerBottom = window.innerHeight * 0.85;
+      sections.forEach(section => {
+        const boxTop = section.getBoundingClientRect().top;
+        if (boxTop < triggerBottom) {
+          section.classList.add("visible");
+        }
+      });
+    }
+
+    window.addEventListener("scroll", revealOnScroll);
+    window.addEventListener("load", revealOnScroll);
+  </script>
 </body>
 </html>
