--- a/index.html
+++ b/index.html
@@ -1,316 +1,138 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elnaz Abbasifar — Portfolio</title>
-
-  <!-- AOS CSS (Animate On Scroll) -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curriculum Vitae</title>
   <style>
-    /* ---------- Reset & Base ---------- */
-    :root{
-      --sidebar-bg:#f0f0f0;
-      --text:#333333;
-      --muted:#6b7280;
-      --card-bg:#ffffff;
-      --accent:#1e40af;
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9fb;
+      color: #333;
+      line-height: 1.6;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;padding:0;font-family: 'Segoe UI', Tahoma, Arial; background:#f8fafc;color:var(--text); -webkit-font-smoothing:antialiased;}
-    a{color:var(--accent); text-decoration:none;}
-    a:hover{text-decoration:underline}
-
-    /* ---------- Layout ---------- */
-    .layout{display:flex;min-height:100vh;}
-    /* Sidebar (header on left) */
-    .sidebar{
-      width:280px;
-      background:var(--sidebar-bg);
-      padding:28px 20px;
-      position:fixed;
-      left:0; top:0; bottom:0;
-      overflow:auto;
-      border-right:1px solid rgba(0,0,0,0.04);
+    header {
+      background: #f0f0f0;
+      padding: 30px;
+      text-align: left;
     }
-    .photo{
-      width:128px;height:128px;border-radius:50%;object-fit:cover;border:3px solid #eaeefb; display:block;margin:0 auto 14px;
-      box-shadow:0 8px 20px rgba(16,24,40,0.06);
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      color: #222;
     }
-    .name{ text-align:center; font-weight:700; font-size:1.15rem; color:#111827; margin-bottom:8px; line-height:1.35;}
-    .title{ text-align:center; color:var(--muted); font-size:0.95rem; margin:0 0 14px; line-height:1.6; padding:0 6px;}
-    .contact{ font-size:0.92rem; color:var(--text); margin-bottom:14px; line-height:1.5; text-align:center;}
-    .contact a{color:var(--accent)}
-    hr.sep{border:none;height:1px;background:rgba(0,0,0,0.04); margin:18px 0}
-
-    .sidebar h4{font-size:0.95rem;color:#111827;margin:12px 0 8px}
-    .skill-list{font-size:0.92rem;color:var(--text);line-height:1.6}
-    .nav-links{margin-top:18px}
-    .nav-links a{display:block;color:var(--text);padding:8px 6px;border-radius:6px;font-weight:600;margin:6px 0;transition:all .18s}
-    .nav-links a:hover{background:rgba(30,64,175,0.06); color:var(--accent)}
-
-    /* ---------- Top Navbar (outside sidebar) ---------- */
-    .topnav{
-      position:fixed;
-      left:280px; right:0; top:0;
-      height:56px;
-      background:#ffffff;
-      border-bottom:1px solid rgba(0,0,0,0.04);
-      display:flex;
-      align-items:center;
-      gap:18px;
-      padding:0 28px;
-      z-index:40;
+    header p {
+      margin: 8px 0 0;
+      color: #555;
     }
-    .topnav a{color:var(--text);font-weight:600;padding:6px 10px;border-radius:6px; transition:all .18s}
-    .topnav a:hover{color:var(--accent);background:rgba(30,64,175,0.04)}
-
-    /* ---------- Content ---------- */
-    .content{
-      margin-left:280px;
-      padding:90px 40px 60px 40px; /* leave space for topnav */
-      width:calc(100% - 280px);
+    .contact {
+      margin-top: 15px;
+      font-size: 0.9rem;
+      color: #444;
     }
-    section{margin-bottom:34px}
-    h2.section-title{font-size:1.1rem;color:#444444;margin:0 0 12px;font-weight:700}
-    .card{
-      background:var(--card-bg);
-      border-radius:12px;
-      padding:18px;
-      box-shadow:0 8px 22px rgba(2,6,23,0.06);
-      margin-bottom:12px;
+    .container {
+      width: 85%;
+      max-width: 1000px;
+      margin: 30px auto;
     }
-    .muted{color:var(--muted);font-size:0.95rem}
-    ul.clean{margin:10px 0 0 0; padding-left:1.1rem}
-    ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.98rem}
-
-    /* Publications list style */
-    .pub-item{margin-bottom:10px;padding-left:6px}
-    .pub-item b{display:block;color:#111827;font-weight:700;margin-bottom:4px}
-
-    /* Projects */
-    .project-title{font-weight:700;color:#111827;margin-bottom:6px}
-    .project-meta{color:var(--muted);font-size:0.95rem;margin-bottom:8px}
-    .project-link{font-weight:600;color:var(--accent);font-size:0.95rem}
-
-    /* Certificates carousel simple */
-    .carousel{display:flex;gap:12px;overflow:hidden;padding:8px 0;border-radius:10px}
-    .cert{min-width:220px;height:140px;background:#fff;border-radius:10px;display:flex;align-items:center;justify-content:center;box-shadow:0 6px 18px rgba(2,6,23,0.06)}
-    .cert img{max-width:100%;max-height:100%;object-fit:cover;border-radius:8px}
-
-    /* Responsive */
-    @media (max-width:900px){
-      .sidebar{display:none}
-      .topnav{left:0;width:100%}
-      .content{margin-left:0;padding:100px 18px 40px}
+    section {
+      margin-bottom: 40px;
+    }
+    section h2 {
+      color: #444;
+      font-size: 1.4rem;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 15px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      margin-bottom: 8px;
     }
   </style>
 </head>
 <body>
 
-  <div class="layout">
-    <!-- SIDEBAR (header on left) -->
-    <aside class="sidebar" role="complementary">
-      <img class="photo" src="https://via.placeholder.com/300x300?text=Photo" alt="Elnaz Abbasifar">
-      <div class="name">Elnaz Abbasifar</div>
-      <div class="title">M.Sc. in IT Management (Advanced Information Systems) — B.Sc. Computer Engineering (Software)</div>
-
-      <div class="contact">
-        <div><strong>ایمیل:</strong> <a href="mailto:e.abbasifar@outlook.com">e.abbasifar@outlook.com</a></div>
-        <div><strong>لینکدین:</strong> <a href="https://www.linkedin.com/in/elnazabbasifar/" target="_blank">linkedin.com/in/elnazabbasifar</a></div>
-        <div><strong>گیت‌هاب:</strong> <a href="https://github.com/elnazabbasifar" target="_blank">github.com/elnazabbasifar</a></div>
-      </div>
-
-      <hr class="sep">
-
-      <h4>Skills</h4>
-      <div class="skill-list">
-        <ul style="padding-left:1rem;margin:0">
-          <li>Programming: Python, C#, SQL</li>
-          <li>Libraries: NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
-          <li>Tools: SQL Server, Power BI, Git, Jupyter, Visual Studio, Google Colab</li>
-        </ul>
-      </div>
-
-      <hr class="sep">
-
-      <nav class="nav-links" aria-label="Main sections">
-        <a href="#academic">Academic Background</a>
-        <a href="#publications">Publications</a>
-        <a href="#research">Research Experience</a>
-        <a href="#certificates">Certificates</a>
-        <a href="#projects">Projects</a>
-        <a href="#work">Work Experience</a>
-      </nav>
-    </aside>
-
-    <!-- TOP NAV (outside sidebar) -->
-    <header class="topnav" role="navigation" aria-label="Top navigation">
-      <a href="#academic">Academic</a>
-      <a href="#publications">Publications</a>
-      <a href="#research">Research</a>
-      <a href="#certificates">Certificates</a>
-      <a href="#projects">Projects</a>
-      <a href="#work">Work</a>
-    </header>
-
-    <!-- MAIN CONTENT -->
-    <main class="content" role="main">
-
-      <!-- Academic Background (ONLY summer schools & training as requested) -->
-      <section id="academic" data-aos="fade-up">
-        <h2 class="section-title">Academic Background & Training</h2>
-
-        <div class="card" data-aos="zoom-in">
-          <ul class="clean">
-            <li><strong>Artificial Intelligence Autumn School</strong> (English-medium), Amirkabir University of Technology, Iran — Nov–Dec 2021</li>
-            <li><strong>Resource-Aware Machine Learning</strong>, 5th International Summer School, TU Dortmund University, Germany — Sep 2020</li>
-            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany — Aug–Sep 2020</li>
-            <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine — Jul 2020</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Publications (moved after Academic Background) -->
-      <section id="publications" data-aos="fade-up">
-        <h2 class="section-title">Publications</h2>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="80">
-          <div class="pub-item">
-            <div><b>E. Abbasifar, A. Shayan</b></div>
-            <div class="muted">The Impact of Social Network Applications on Customer Trust in Small Businesses with the Mediating Role of Brand Reputation: A Structural Equations Modeling Approach (Case Study: Modiseh Online Store). 2nd International Conference on Interdisciplinary Studies in Management & Engineering, University of Tehran, 2020.</div>
-          </div>
-
-          <div class="pub-item" style="margin-top:10px">
-            <div><b>E. Abbasifar</b></div>
-            <div class="muted">New Applications of Soft Computing Technologies and Soft Data Mining in Bioinformatics: A Review. 2nd International Conference on Advances in Engineering and Basic Sciences, London, UK, 2015.</div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Research Experience -->
-      <section id="research" data-aos="fade-right">
-        <h2 class="section-title">Research Experience</h2>
-
-        <div class="card" data-aos="zoom-in" data-aos-delay="60">
-          <div style="font-weight:700">AI Researcher — Technology Studies Institute, Tehran, Iran (Feb – Sep 2021)</div>
-          <ul class="clean">
-            <li>Conducted a comparative analysis of global AI ecosystems, identifying and ranking sustainability-related indicators.</li>
-            <li>Collaborated with interdisciplinary scientists to integrate insights across computer science, policy, and management.</li>
-          </ul>
-        </div>
-
-        <div class="card" data-aos="zoom-in" data-aos-delay="100">
-          <div style="font-weight:700">Graduate Researcher (Master’s Thesis) — Payame Noor University, Tehran, Iran (2016 – 2018)</div>
-          <ul class="clean">
-            <li>Conducted research on social network analysis as part of MSc thesis.</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Certificates (moved after Research Experience) -->
-      <section id="certificates" data-aos="fade-up">
-        <h2 class="section-title">Certificates</h2>
-
-        <div class="card" data-aos="zoom-in" data-aos-delay="80">
-          <div class="carousel" aria-hidden="false">
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+1" alt="Certificate 1"></div>
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+2" alt="Certificate 2"></div>
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+3" alt="Certificate 3"></div>
-          </div>
-
-          <ul class="clean" style="margin-top:12px">
-            <li>Supervised Machine Learning (example certificate title)</li>
-            <li>Matrix Algebra (example certificate title)</li>
-            <li>Advanced Data Management</li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Projects -->
-      <section id="projects" data-aos="zoom-in">
-        <h2 class="section-title">Projects</h2>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="60">
-          <div class="project-title">Tree-Structured Graph Classification with GNN — 2025</div>
-          <div class="project-meta">A GCN using PyTorch Geometric to classify tree graphs.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="100">
-          <div class="project-title">Precision in Cardiovascular Risk Prediction: A Lasso Regression Approach — ShineTech, 2023</div>
-          <div class="project-meta">A Lasso Regression model for cardiovascular risk prediction.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="140">
-          <div class="project-title">Advanced Prediction using Ensemble Learning Techniques — ShineTech, 2023</div>
-          <div class="project-meta">Mobile price prediction models using Decision Trees and Random Forest.</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="180">
-          <div class="project-title">EDA Seattle Area Traffic Collision Data — Data Circles, 2020</div>
-          <div class="project-meta">During Data Circles workshop, we analyzed Seattle traffic collision data to help prioritize road improvements and prevent future collisions through Exploratory Data Analysis (EDA).</div>
-          <div class="project-link"><a href="#" target="_blank">GitHub Project Link</a></div>
-        </div>
-      </section>
-
-      <!-- Work Experience (after Projects) -->
-      <section id="work" data-aos="fade-right">
-        <h2 class="section-title">Work Experience</h2>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="60">
-          <div style="font-weight:700">BPM Data Analyst — Pegah Aftab, Tehran, Iran (Apr 2021 – Present)</div>
-          <ul class="clean">
-            <li>Designed and implemented business processes and UI components using C# and React.</li>
-            <li>Analyzed workflows and authored technical documentation to support process optimization.</li>
-          </ul>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="100">
-          <div style="font-weight:700">BI Developer — Pegah Aftab, Tehran, Iran (Jun – Dec 2024)</div>
-          <ul class="clean">
-            <li>Developed interactive dashboards in Power BI to visualize key performance metrics and support decision-making.</li>
-          </ul>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="140">
-          <div style="font-weight:700">Data Science Intern (Python) — T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</div>
-          <ul class="clean">
-            <li>Developed Python scripts to automate data collection, processing, and analysis.</li>
-            <li>Improved efficiency and accuracy of routine data workflows.</li>
-          </ul>
-        </div>
-
-        <div class="card" data-aos="fade-up" data-aos-delay="180">
-          <div style="font-weight:700">SQL Developer / BPM Developer — Payam Mashregh, Esfahan, Iran (2014 – 2017)</div>
-          <ul class="clean">
-            <li>Supervised a 9-member development team in optimizing processes and workflows.</li>
-            <li>Implemented SQL queries to automate workflows and support data-driven decision-making.</li>
-          </ul>
-        </div>
-      </section>
-
-    </main>
+<header>
+  <h1>Elnaz Abbasifar</h1>
+  <p>PhD Applicant | Data Science & Machine Learning</p>
+  <div class="contact">
+    📧 elnaz@example.com | 🌐 elnazabbasifar.github.io | 📍 Location
   </div>
+</header>
 
-  <!-- AOS JS -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({ duration:900, once:true, easing:'ease-out-cubic' });
+<div class="container">
+  <!-- Academic Background -->
+  <section id="education">
+    <h2>Academic Background</h2>
+    <div class="card">
+      <ul>
+        <li>M.Sc. in IT Management (Advanced Information Systems)</li>
+        <li>B.Sc. in Computer Engineering – Software</li>
+      </ul>
+    </div>
+  </section>
 
-    // small carousel auto-scroll (visual only)
-    (function(){
-      const track = document.querySelector('.carousel');
-      if(!track) return;
-      let pos = 0;
-      setInterval(()=>{
-        pos = (pos + 232) % (track.scrollWidth);
-        track.scrollTo({ left: pos, behavior: 'smooth' });
-      }, 3000);
-    })();
-  </script>
+  <!-- Publications -->
+  <section id="publications">
+    <h2>Publications</h2>
+    <div class="card">Paper 1 – Title of the paper, Journal/Conference, Year</div>
+    <div class="card">Paper 2 – Title of the paper, Journal/Conference, Year</div>
+    <div class="card">Paper 3 – Title of the paper, Journal/Conference, Year</div>
+  </section>
+
+  <!-- Research Experience -->
+  <section id="research">
+    <h2>Research Experience</h2>
+    <div class="card">
+      Worked on graph-based data analysis, bioinformatics datasets, 
+      and machine learning workflows for predictive modeling.
+    </div>
+  </section>
+
+  <!-- Certificates -->
+  <section id="certificates">
+    <h2>Certificates</h2>
+    <div class="card">Machine Learning Specialization – Coursera</div>
+    <div class="card">Deep Learning – Udemy</div>
+    <div class="card">Agile BPM Systems</div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="card">Graph Classification with GraphSAGE on PPI Dataset</div>
+    <div class="card">Workflow Optimization in BPMS</div>
+    <div class="card">Network Analysis of Social Data</div>
+  </section>
+
+  <!-- Work Experience -->
+  <section id="work">
+    <h2>Work Experience</h2>
+    <div class="card">
+      <ul>
+        <li>BPMS Developer – Process Automation & Data Analysis</li>
+        <li>Workflow design, integration, and ML-based analytics</li>
+      </ul>
+    </div>
+  </section>
+</div>
+
 </body>
 </html>
