--- a/index.html
+++ b/index.html
@@ -209,12 +209,14 @@
       <section id="certificates" data-aos="fade-up">
         <h2 class="section-title">Certificates</h2>
 
-        <div class="card" data-aos="zoom-in" data-aos-delay="80">
-          <div class="carousel" aria-hidden="false">
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+1" alt="Certificate 1"></div>
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+2" alt="Certificate 2"></div>
-            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+3" alt="Certificate 3"></div>
+        <div class="carousel" id="carousel">
+          <div class="carousel-track" id="track">
+            <div class="carousel-item"><img src="https://drive.google.com/file/d/1_NaeBTSXBd8EBJ_e6bIibkqt4YTADphY/view?usp=drive_link">Supervised Machine Learning</div>
+            <div class="carousel-item"><img src="https://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link"></div>
+            <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+3"></div>
           </div>
+          <button class="carousel-btn left" id="prev">‹</button>
+          <button class="carousel-btn right" id="next">›</button>
 
           <ul class="clean" style="margin-top:12px">
             <li>Supervised Machine Learning (example certificate title)</li>
