--- a/index.html
+++ b/index.html
@@ -212,17 +212,11 @@
         <div class="carousel" id="carousel">
           <div class="carousel-track" id="track">
             <div class="carousel-item"><img src="https://drive.google.com/file/d/1_NaeBTSXBd8EBJ_e6bIibkqt4YTADphY/view?usp=drive_link">Supervised Machine Learning</div>
-            <div class="carousel-item"><img src="https://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link"></div>
+            <div class="carousel-item"><img src="https://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link">Matrix Algebra</div>
             <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+3"></div>
           </div>
           <button class="carousel-btn left" id="prev">‹</button>
           <button class="carousel-btn right" id="next">›</button>
-
-          <ul class="clean" style="margin-top:12px">
-            <li>Supervised Machine Learning (example certificate title)</li>
-            <li>Matrix Algebra (example certificate title)</li>
-            <li>Advanced Data Management</li>
-          </ul>
         </div>
       </section>
 
