--- a/index.html
+++ b/index.html
@@ -84,10 +84,18 @@
     ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.98rem}
 
     /* Publications */
-    .pub-card { margin-bottom:12px; }
-
-    .pub-item{margin-bottom:10px;padding-left:6px}
-    .pub-item b{display:block;color:#111827;font-weight:700;margin-bottom:6px}
+    /* Carousel */
+    .carousel { position:relative; overflow:hidden; max-width:800px; margin:0 auto; }
+    .carousel-track { display:flex; transition:transform 0.5s ease-in-out; }
+    .carousel-item { flex:0 0 240px; margin-right:1rem; border-radius:8px; overflow:hidden; }
+    .carousel-item img { width:100%; height:160px; object-fit:cover; }
+    .carousel-btn {
+      position:absolute; top:50%; transform:translateY(-50%);
+      background:#2563eb; color:white; border:none;
+      padding:6px 10px; border-radius:50%; cursor:pointer;
+    }
+    .carousel-btn.left { left:10px; }
+    .carousel-btn.right { right:10px; }
 
     /* Projects */
     .project-title{font-weight:700;color:#111827;margin-bottom:6px}
