--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="layout">
     <!-- SIDEBAR (header on left) -->
     <aside class="sidebar" role="complementary">
-      <img class="photo" src="https://via.placeholder.com/300x300?text=Photo" alt="Elnaz Abbasifar">
+      <img class="photo" src="https://drive.google.com/file/d/1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9/view?usp=drive_link" alt="Elnaz Abbasifar">
       <div class="name">Elnaz Abbasifar</div>
       <div class="title">M.Sc. in IT Management (Advanced Information Systems) — B.Sc. Computer Engineering (Software)</div>
 
