--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
     ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.98rem}
 
     /* Publications */
-    .pub-card { margin-bottom:12px; }
-
-    .pub-item{margin-bottom:10px;padding-left:6px}
-    .pub-item b{display:block;color:#111827;font-weight:700;margin-bottom:6px}
+    .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
+    .card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; }
+    .card:hover { transform:scale(1.05); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
 
     /* Projects */
     .project-title{font-weight:700;color:#111827;margin-bottom:6px}
@@ -157,10 +156,10 @@
 
         <div class="card" data-aos="zoom-in">
           <ul class="clean">
-            <li><strong>Artificial Intelligence Autumn School</strong> (English-medium), Amirkabir University of Technology, Iran — Nov–Dec 2021</li>
-            <li><strong>Resource-Aware Machine Learning</strong>, 5th International Summer School, TU Dortmund University, Germany — Sep 2020</li>
-            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany — Aug–Sep 2020</li>
-            <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine — Jul 2020</li>
+            <li><strong>Artificial Intelligence Autumn School</strong> (English-medium), Amirkabir University of Technology, Iran (2021)</li>
+            <li><strong>Resource-Aware Machine Learning</strong>, 5th International Summer School, TU Dortmund University, Germany (2020)</li>
+            <li><strong>Security of Things (SeThi 2020)</strong>, University of Rostock, Germany (2020)</li>
+            <li><strong>Lviv Data Science Summer School</strong>, Ukrainian Catholic University, Ukraine (2020)</li>
           </ul>
         </div>
       </section>
@@ -272,7 +271,6 @@
           <div style="font-weight:700">Data Science Intern (Python) — T25 Company, Tehran, Iran (Nov 2020 – Jan 2021)</div>
           <ul class="clean">
             <li>Developed Python scripts to automate data collection, processing, and analysis.</li>
-            <li>Improved efficiency and accuracy of routine data workflows.</li>
           </ul>
         </div>
 
