--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
     ul.clean li{margin:8px 0;line-height:1.5;color:var(--text);font-size:0.98rem}
 
     /* Publications */
-    .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:20px; max-width:1000px; margin:0 auto; }
-    .card { background:white; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); transition:0.3s; }
-    .card:hover { transform:scale(1.05); box-shadow:0 8px 25px rgba(0,0,0,0.2); }
+    .pub-card { margin-bottom:12px; }
+
+    .pub-item{margin-bottom:10px;padding-left:6px}
+    .pub-item b{display:block;color:#111827;font-weight:700;margin-bottom:6px}
 
     /* Projects */
     .project-title{font-weight:700;color:#111827;margin-bottom:6px}
@@ -111,7 +112,7 @@
   <div class="layout">
     <!-- SIDEBAR (header on left) -->
     <aside class="sidebar" role="complementary">
-      <img class="photo" src="https://drive.google.com/file/d/1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9/view?usp=drive_link" alt="Elnaz Abbasifar">
+      <img class="photo" src="https://drive.google.com/uc?export=view&id=1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9" alt="Elnaz Abbasifar">
       <div class="name">Elnaz Abbasifar</div>
       <div class="title">M.Sc. in IT Management (Advanced Information Systems) — B.Sc. Computer Engineering (Software)</div>
 
