--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
         <div class="carousel" id="carousel">
           <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="https://drive.google.com/file/d/1_NaeBTSXBd8EBJ_e6bIibkqt4YTADphY/view?usp=drive_link">Supervised Machine Learning</div>
+            <div class="carousel-item"><img src="https://drive.google.com/uc?id=1fajJqKMRTLMAdHdBuIze6jkX7i3soVur">Supervised Machine Learning</div>
             <div class="carousel-item"><img src="https://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link">Matrix Algebra</div>
             <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+3"></div>
           </div>
