--- a/index.html
+++ b/index.html
@@ -209,14 +209,18 @@
       <section id="certificates" data-aos="fade-up">
         <h2 class="section-title">Certificates</h2>
 
-        <div class="carousel" id="carousel">
-          <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="https://drive.google.com/uc?id=1fajJqKMRTLMAdHdBuIze6jkX7i3soVur">Supervised Machine Learning</div>
-            <div class="carousel-item"><img src="https://drive.google.com/file/d/1UWFwUqIsvZSdfysjPLKuo1JFUk1cxigv/view?usp=drive_link">Matrix Algebra</div>
-            <div class="carousel-item"><img src="https://via.placeholder.com/240x160?text=Cert+3"></div>
+        <div class="card" data-aos="zoom-in" data-aos-delay="80">
+          <div class="carousel" aria-hidden="false">
+            <div class="cert"><img src="https://drive.google.com/uc?id=1fajJqKMRTLMAdHdBuIze6jkX7i3soVur" alt="Certificate 1"></div>
+            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+2" alt="Certificate 2"></div>
+            <div class="cert"><img src="https://via.placeholder.com/360x220?text=Cert+3" alt="Certificate 3"></div>
           </div>
-          <button class="carousel-btn left" id="prev">‹</button>
-          <button class="carousel-btn right" id="next">›</button>
+
+          <ul class="clean" style="margin-top:12px">
+            <li>Supervised Machine Learning (example certificate title)</li>
+            <li>Matrix Algebra (example certificate title)</li>
+            <li>Advanced Data Management</li>
+          </ul>
         </div>
       </section>
 
