--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="card" data-aos="zoom-in" data-aos-delay="80">
           <div class="carousel-wrap" aria-hidden="false">
             <div class="carousel-track">
-              <div class="carousel-item cert"><img src="https://drive.google.com/uc?id=1fajJqKMRTLMAdHdBuIze6jkX7i3soVur" alt="Certificate 1"></div>
+              <div class="carousel-item cert"><img src="https://drive.google.com/uc?id=1fajJqKMRTLMAdHdBuIze6jkX7i3soVur" alt="Certificate" style="max-width:100%; height:auto;"></div>
               <div class="carousel-item cert"><img src="https://via.placeholder.com/360x220?text=Cert+2" alt="Certificate 2"></div>
               <div class="carousel-item cert"><img src="https://via.placeholder.com/360x220?text=Cert+3" alt="Certificate 3"></div>
 
