--- a/index.html
+++ b/index.html
@@ -212,16 +212,16 @@
       </section>
 
       <!-- Certificates (moved after Research Experience) -->
-      <section id="certificates" data-aos="fade-up">
+      <section id="certificates" data-animate style="background:#eef2ff;" data-aos="fade-up">
         <h2 class="section-title">Certificates</h2>
       
         <div class="card" data-aos="zoom-in" data-aos-delay="80">
           <div class="carousel" id="carousel">
-          <div class="carousel-track" id="track">
-            <div class="carousel-item"><img src="https://drive.google.com/uc?id=1kdWuoe8-by-H8GenAK3H6iF_mSA3WexU/view?usp=sharing" alt="Certificate 1"></div>
-            <div class="carousel-item"><img src="cert2.jpg" alt="Certificate 2"></div>
-            <div class="carousel-item"><img src="cert3.jpg" alt="Certificate 3"></div>
-          </div>
+            <div class="carousel-track" id="track">
+              <div class="carousel-item"><img src="https://drive.google.com/uc?id=1kdWuoe8-by-H8GenAK3H6iF_mSA3WexU/view?usp=sharing" alt="Certificate 1"></div>
+              <div class="carousel-item"><img src="cert2.jpg" alt="Certificate 2"></div>
+              <div class="carousel-item"><img src="cert3.jpg" alt="Certificate 3"></div>
+            </div>
       
             <!-- controls -->
             <button class="carousel-btn prev" aria-label="Previous">‹</button>
