--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
       <div class="sidebar-section">
         <h4>Skills</h4>
         <ul>
-          <li>Programming: Python, C#, SQL</li>
-          <li>Libraries: NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
-          <li>Tools: SQL Server, Power BI, Git, Jupyter, Visual Studio, Google Colab</li>
+          <li><strong>Programming:</strong> Python, C#, SQL</li>
+          <li><strong>Data & ML Libraries:</strong> NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn, PyTorch Geometric</li>
+          <li><strong>Tools & Platforms:</strong> SQL Server, Power BI, Git, Jupyter, Visual Studio, Google Colab</li>
         </ul>
       </div>
     </aside>
