--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- SIDEBAR -->
     <aside class="sidebar" role="complementary">
       <div class="sidebar-header">
-        <img class="photo" src="https://drive.google.com/uc?id=1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9" alt="Elnaz Abbasifar">
+        <img class="photo" src="https://drive.google.com/uc?export=view&id=1k43VJGulb0Wg5gd0VPmtVyAO72INtbX9" alt="Elnaz Abbasifar">
         <div class="name">Elnaz Abbasifar</div>
         <div class="title">M.Sc. in IT Management (Advanced Information Systems)<br>B.Sc. Computer Engineering (Software)</div>
       </div>
