--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       <div class="sidebar-header">
         <img class="photo" src="images/profile.jpg" alt="Elnaz Abbasifar">
         <div class="name">Elnaz Abbasifar</div>
+        <p>PhD Applicant | Machine Learning | Data Management | Health Informatics<br></p>
         <div class="title">M.Sc. in IT Management (Advanced Information Systems)<br>B.Sc. Computer Engineering (Software)</div>
       </div>
 
